another try at getting these files to load correctly!!

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
 
     <!-- JS Scripts -->
         <!-- set up with Express proxy for security..."modules" directory maps to "node_modules" directory -->
-        <script src="scripts/dist/jquery.min.js"></script>
-        <script src="scripts/angular.js"></script>
+        <script src="scripts/jquery/dist/jquery.min.js"></script>
+        <script src="scripts/angular/angular.js"></script>
         <!-- main angular app file-->
         <script src="js/app.js"></script>
     </body>
